add some recommended extensions for vscode and a debug launch config to load env file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,8 @@ services:
   autopatch:
     build: ./main
     container_name: autopatch
-    # env_file:
-    #   - ./main/.env
-    environment:
-       OPEN_API_KEY: /run/secrets/open_api_key
-    secrets:
-      - open_api_key
+    env_file:
+      - ./main/.env
     volumes:
       - ./afl-2.52b:/app/afl-2.52b
     working_dir: /app
-
-secrets:
-  open_api_key:
-    environment: OPEN_API_KEY
