add some recommended extensions to dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -47,7 +47,15 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"ms-python.python"
+				"ms-python.python",
+				"ms-vscode.cpptools-extension-pack",
+				"ms-python.debugpy",
+				"tomoki1207.pdf",
+				"ms-vscode-remote.vscode-remote-extensionpack",
+				"ms-vscode.cpptools-themes",
+				"yzhang.markdown-all-in-one",
+				"ms-azuretools.vscode-docker",
+				"GitHub.copilot"
 			]
 		}
 	},
