--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-	"name": "Ubuntu",
+	"name": "AutoPatch Python devcontainer",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/base:noble",
 	// Features to add to the dev container. More info: https://containers.dev/features.
@@ -35,13 +35,10 @@
 		"ghcr.io/hspaans/devcontainer-features/pytest:1": {
 			"plugins": "pytest-testinfra"
 		},
-		"ghcr.io/va-h/devcontainers-features/uv:1": {},
-		"ghcr.io/devcontainers-extra/features/btop-homebrew:1": {},
 		"ghcr.io/devcontainers-extra/features/fzf:1": {},
 		"ghcr.io/devcontainers-extra/features/go-task:1": {},
 		"ghcr.io/devcontainers-extra/features/neovim-apt-get:1": {},
 		"ghcr.io/devcontainers-extra/features/ripgrep:1": {},
-		"ghcr.io/devcontainers-extra/features/ruff:1": {},
 		"ghcr.io/devcontainers-extra/features/tmux-apt-get:1": {}
 	},
 	"customizations": {
@@ -61,15 +58,5 @@
 	},
 	"runArgs": ["--env-file",".devcontainer/devcontainer.env"],
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "task main:build && uname -a"
-
-	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
 }
