add the service's requirements to the devcontainer so it does not need the run under a seperate docker container if a developer does not want to

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -58,5 +58,5 @@
 	},
 	"runArgs": ["--env-file",".devcontainer/devcontainer.env"],
 
-	"postCreateCommand": "task main:build && uname -a"
+	"postCreateCommand": "task main:build -- --break-system-packages && uname -a && python --version"
 }
