add CLI args optionally to invocation of service requirements in Taskfile

--- a/main/Taskfile.yml
+++ b/main/Taskfile.yml
@@ -6,7 +6,7 @@ tasks:
     desc: install AutoPatch dependencies
     cmds:
       - echo "hello AutoPatch!"
-      - pip install -r requirements.txt
+      - pip install {{.CLI_ARGS}} -r requirements.txt
 
   create-required-dirs:
     desc: create required directories
