--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,15 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "envFile": "${workspaceFolder}/main/.env",
+            "envFile": "${workspaceFolder}/src/.env",
+        },
+        {
+            "name": "Python Debugger: AutoPatch Main",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/main.py",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/src/.env",
         }
     ]
 }
