--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
       - ./src/.env
     volumes:
       - ./afl-2.52b:/app/afl-2.52b
-      - ./src/bugLog:/app/bugLog
-      - ./src/codebase:/app/codebase
-      - ./src/executables:/app/executables
-      - ./src/executables_afl:/app/executables_afl
-      - ./src/input:/app/input
-      - ./src/patched_codes:/app/patched_codes
+      - ./src/bugLog:/app/src/bugLog
+      - ./src/codebase:/app/src/codebase
+      - ./src/executables:/app/src/executables
+      - ./src/executables_afl:/app/src/executables_afl
+      - ./src/input:/app/src/input
+      - ./src/patched_codes:/app/src/patched_codes
     working_dir: /app
 
