--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,15 @@
 {
     "recommendations": [
         "ms-python.python",
+        "ms-vscode.cpptools-extension-pack",
         "ms-python.debugpy",
-        "tomoki1207.pdf",
         "ms-vscode-remote.vscode-remote-extensionpack",
         "ms-vscode.cpptools-themes",
         "yzhang.markdown-all-in-one",
         "ms-azuretools.vscode-docker",
-        "github.copilot",
-        "task.vscode-task"
+        "GitHub.copilot",
+        "task.vscode-task",
+        "ms-python.isort",
+        "ms-python.black-formatter"
     ]
 }
