Use Alpine base image for autopatch prod image.  Add resource monitor to devcontainer.  Add docs folder.  Add vscode PDF extension.  Add github copilot chat.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -55,7 +55,9 @@
 				"ms-vscode.cpptools-themes",
 				"yzhang.markdown-all-in-one",
 				"ms-azuretools.vscode-docker",
+				"mutantdino.resourcemonitor",
 				"GitHub.copilot",
+				"GitHub.copilot-chat",
 				"task.vscode-task",
 				"ms-python.isort",
 				"ms-python.black-formatter"
