--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,12 +2,15 @@
     "recommendations": [
         "ms-python.python",
         "ms-vscode.cpptools-extension-pack",
+        "tomoki1207.pdf",
         "ms-python.debugpy",
         "ms-vscode-remote.vscode-remote-extensionpack",
         "ms-vscode.cpptools-themes",
         "yzhang.markdown-all-in-one",
+        "yzane.markdown-pdf",
         "ms-azuretools.vscode-docker",
         "GitHub.copilot",
+        "GitHub.copilot-chat",
         "task.vscode-task",
         "ms-python.isort",
         "ms-python.black-formatter"
