--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -36,7 +36,8 @@ tasks:
   create-required-dirs:
     desc: create required directories
     cmds:
-      - mkdir -p src/bugLog/
+      - mkdir -p src/asan_bugLog/
+      - mkdir -p src/afl_bugLog/
       - mkdir -p src/codebase/
       - mkdir -p src/executables/
       - mkdir -p src/executables_afl/
@@ -46,7 +47,10 @@ tasks:
   rm-temp-dirs:
     desc: remove temporary directories
     cmds:
-      - rm -rf src/bugLog/
+      - rm -rf src/asan_bugLog/
+      - rm -rf src/afl_bugLog/
       - rm -rf src/executables/
       - rm -rf src/executables_afl/
       - rm -rf src/patched_codes/
+      - rm -rf src/output*/
+      - rm -rf src/command_log/
