--- a/src/.env.example
+++ b/src/.env.example
@@ -1,7 +1,8 @@
 OPEN_API_KEY='CHANGE_ME'
 AFL_COMPILER_PATH='../afl-2.52b/afl-gcc'
 AFL_FUZZER_PATH='../afl-2.52b/afl-fuzz'
-BUGLOG_PATH='./bugLog'
+ASAN_BUGLOG_PATH=asan_bugLog/
+AFL_BUGLOG_PATH=afl_bugLog/
 CODEBASE_PATH='./codebase/'
 EXECUTABLES_PATH='./executables/'
 EXECUTABLES_AFL_PATH='./executables_afl/'
