--- a/src/Taskfile.yml
+++ b/src/Taskfile.yml
@@ -1,17 +1,21 @@
 version: '3'
 
+env:
+  ARGS: --break-system-packages # Use this If you are installing packages using the Taskfile Extension for VSCode UI and devcontainer
+
 tasks:
   build:
     desc: install AutoPatch prod dependencies
     cmds:
-      - echo "Hello AutoPatch!"
-      - pip install {{.CLI_ARGS}} -r ./requirements.txt
+      - echo "If you are running this manually and installing in a VM instead of a devcontainer, use a virtual environment and activate it first."
+      - pip install {{.CLI_ARGS}} $ARGS -r ./requirements.txt
 
   install-devtools:
     desc: install AutoPatch dev dependencies
     cmds:
       - task: build
-      - pip install {{.CLI_ARGS}} -r ./dev-requirements.txt
+      - echo "If you are running this manually and installing in a VM instead of a devcontainer, use a virtual environment and activate it first."
+      - pip install {{.CLI_ARGS}} $ARGS -r ./dev-requirements.txt
 
   run-autopatch:
     desc: run AutoPatch
