this commit uses the python stdlib logging facility and removes the various logging output directories, replacing them with an info, error, debug logging level scheme with configuration file.  Default console logs only error and info.  Debug logs are directed to a file

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,9 +4,9 @@ includes:
  autopatch:
     taskfile: ./src/Taskfile.yml
     dir: ./src
- fuzzing-svc:
-    taskfile: ./src/fuzzing-svc/Taskfile.yml
-    dir: ./src/fuzzing-svc
+ fuzzing-service:
+    taskfile: ./src/fuzzing-service/Taskfile.yml
+    dir: ./src/fuzzing-service
  llm-dispatch:
     taskfile: ./src/llm-dispatch/Taskfile.yml
     dir: ./src/llm-dispatch
