add fuzzing-service:run preconditions

--- a/src/fuzzing-service/Taskfile.yml
+++ b/src/fuzzing-service/Taskfile.yml
@@ -18,17 +18,17 @@ tasks:
   run:
     desc: run autopatch-fuzzingservice
     generates:
-      - autopatch.fuzzing-service.debug.log
-    sources:
-      - config.json
+      - autopatch-fuzzingservice.log
+    preconditions:
+      - stat config.json
     cmds:
       - python ./fuzzing-service-main.py
   
   debug:
     desc: debug autopatch-fuzzingservice
     generates:
-      - autopatch.fuzzing-service.debug.log
-    sources:
-      - config.json
+      - autopatch-fuzzingservice.log
+    preconditions:
+      - stat config.json
     cmds:
       - python -m pdb ./fuzzing-service-main.py
