--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ name = "autopatch"
 version = "0.1.0"
 requires-python = ">=3.12.3"
 description = ""
-authors = [ 
-    { name = "Robert D. Hernandez", email = "rherna70@uic.edu" }
-    { name = "Lily Leith", email = "lleit@uic.edu" }
-]
+
+[build-system]
+requires = ["setuptools >= 61.0"]
+build-backend = "setuptools.build_meta"
 
 [tool.isort]
 src_paths = ["src", "test"]
