--- a/src/fuzzing-service/pyproject.toml
+++ b/src/fuzzing-service/pyproject.toml
@@ -2,6 +2,11 @@
 name = "autopatch.fuzzing-service"
 version = "0.1.0"
 requires-python = ">=3.12.3"
+readme = "README.md"
+
+[build-system]
+requires = ["setuptools >= 61.0"]
+build-backend = "setuptools.build_meta"
 
 [tool.isort]
 profile = "black"
