--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "autopatch"
+name = "autopatch.fuzzing-service"
 version = "0.1.0"
 requires-python = ">=3.12.3"
 description = ""
