--- a/src/fuzzing-service/Taskfile.yml
+++ b/src/fuzzing-service/Taskfile.yml
@@ -4,6 +4,8 @@ tasks:
   core-dump-notification-config:
     summary: Configure core dump notification if running in GCE
     desc: |
+      This section is for when afl2.52b runs in GCE, it may display a message like
+      
       Hmm, your system is configured to send core dump notifications to an
       external utility. This will cause issues: there will be an extended delay
       between stumbling upon a crash and having this information relayed to the
