Features: Adds containerized fuzzing job runs E2E.  Adds logging framework.  Extracts configuration. Add tests.  Squashes zombie process bug.  Update documentation

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,10 +3,7 @@
 {
 	"name": "AutoPatch Python and C devcontainer",
 	"build": {
-		"dockerfile": "Dockerfile",
-		"args": {
-			"VARIANT": "noble"
-		}
+		"dockerfile": "Dockerfile"
 	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
