--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,4 @@
-ARG VARIANT=jammy
-FROM mcr.microsoft.com/devcontainers/base:${VARIANT} AS base
+FROM mcr.microsoft.com/devcontainers/base:noble AS base
 
 ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1
@@ -12,6 +11,7 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
         python3 python3-pip python3-venv && \
     add-apt-repository ppa:zhangsongcui3371/fastfetch && \
     apt-get update && apt-get -y install --no-install-recommends \
+        gcc-multilib libc6-dev-i386 \
         fastfetch && \
     apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
