--- a/src/fuzzing-service/Taskfile.yml
+++ b/src/fuzzing-service/Taskfile.yml
@@ -4,8 +4,8 @@ tasks:
   core-dump-notification-config:
     summary: Configure core dump notification if running in GCE
     desc: |
-      This section is for when afl2.52b runs in GCE, it may display a message like
-      
+      If you are running the fuzzing-service in GCE or another cloud provider you may see your fuzzer return an exit code 1 and you may get this message in your debug log:
+
       Hmm, your system is configured to send core dump notifications to an
       external utility. This will cause issues: there will be an extended delay
       between stumbling upon a crash and having this information relayed to the
@@ -15,8 +15,10 @@ tasks:
       and temporarily modify /proc/sys/kernel/core_pattern, like so:
 
       echo core >/proc/sys/kernel/core_pattern
+
+      You must log in as root OUTSIDE of a devcontainer and edit the `/proc/sys/kernel/core_pattern` file to read only "core" on the first line before proceeding
     cmds:
-      - echo 'you need to login as root on the host system outside of the devcontainer and run \# echo core >/proc/sys/kernel/core_pattern'
+      - echo 'you need to login as root on the host system outside of the devcontainer and run "echo core >/proc/sys/kernel/core_pattern"'
   run:
     desc: run autopatch-fuzzingservice
     generates:
@@ -39,3 +41,8 @@ tasks:
     desc: test autopatch-fuzzingservice
     cmds:
       - pytest
+
+  clean:
+    desc: scrubs the workspace, old debug log files etc.
+    cmds:
+      - truncate -s 0 autopatch.fuzzing-service.debug.log
