--- a/src/fuzzing-service/config.json
+++ b/src/fuzzing-service/config.json
@@ -3,6 +3,7 @@
     "appname": "autopatch.fuzzing-service",
     "logging_config" : "/app/config/logging-config.json",
     "fuzz_svc_input_codebase_path": "/app/data/codebase",
+    "fuzz_svc_output_path": "/app/data/fuzz_svc_output",
     "fuzz_svc_output_topic": "fuzz-svc/output",
     "compiler_warning_flags": "-Wall -Wextra -Wformat -Wshift-overflow -Wcast-align -Wstrict-overflow",
     "compiler_feature_flags": "-m32 -fno-stack-protector -O1 -fsanitize=address",
@@ -11,7 +12,7 @@
     "fuzzer_tool_version": "2.52b",
     "afl_tool_full_path": "/app/bin/afl-2.52b/afl-fuzz",
     "afl_tool_seed_input_path": "/app/data/input",
-    "afl_tool_output_path": "/app/data/output",
+    "afl_tool_output_path": "/app/data/afl_tool_output",
     "afl_tool_child_process_memory_limit_mb": 1000,
     "afl_tool_compiled_binary_executables_output_path": "/app/bin/executables_afl",
     "afl_compiler_tool_full_path": "/app/bin/afl-2.52b/afl-gcc",
