feature/seperate-fuzzing-service (#22)
* add requires-python >=3.12.3 to pyproject.toml

* this commit adds a simple python dataclass for configuration and dynamically reads in configuation from a JSON file

* this commit adds the fuzzing service which runs to completion sequentially

* this commit uses the python stdlib logging facility and removes the various logging output directories, replacing them with an info, error, debug logging level scheme with configuration file.  Default console logs only error and info.  Debug logs are directed to a file

* this commit adds an ADR for using JSON format for config instead of YAML

* add fuzzing-service:run preconditions

* run black on fuzzing-service-main.py

* add initial unit tests with pytest

* add test task for fuzzing-service

* Update pyproject.toml

* Update src/fuzzing-service/README.md

* Update src/fuzzing-service/Taskfile.yml

* Update pyproject.toml

* update readme

* Features: Adds containerized fuzzing job runs E2E.  Adds logging framework.  Extracts configuration. Add tests.  Squashes zombie process bug.  Update documentation

* update gitignore

* seperate out crash reporting into CSV file output

* add high level diagrams and more detailed sequence diagrams

* Create config, data, log directories.  Prep for demo

* Add log dir placeholder

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,10 +3,7 @@
 {
 	"name": "AutoPatch Python and C devcontainer",
 	"build": {
-		"dockerfile": "Dockerfile",
-		"args": {
-			"VARIANT": "noble"
-		}
+		"dockerfile": "Dockerfile"
 	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
@@ -61,7 +58,10 @@
 				"GitHub.copilot-chat",
 				"task.vscode-task",
 				"ms-python.isort",
-				"ms-python.black-formatter"
+				"ms-python.black-formatter",
+				"mechatroner.rainbow-csv",
+				"bierner.markdown-mermaid",
+				"bpruitt-goddard.mermaid-markdown-syntax-highlighting"
 			],
 			"settings": {
 				"[python]": {
