--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "envFile": "${workspaceFolder}/src/.env",
+            "envFile": "/workspace/AutoPatch-LLM/src/fuzzing-service/.env",
         },
         {
             "name": "Python Debugger: AutoPatch Main",
@@ -19,6 +19,14 @@
             "program": "${workspaceFolder}/src/main.py",
             "console": "integratedTerminal",
             "envFile": "${workspaceFolder}/src/.env",
+        }
+        {
+            "name": "Python Debugger: AutoPatch Fuzzing Service",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "/workspace/AutoPatch-LLM/src/fuzzing-service/fuzzing_service.py",
+            "console": "integratedTerminal",
+            "envFile": "/workspace/AutoPatch-LLM/src/fuzzing-service/.env",
         }
     ]
 }
