--- a/src/fuzzing-service/pyproject.toml
+++ b/src/fuzzing-service/pyproject.toml
@@ -1,13 +1,12 @@
 [project]
-name = "autopatch"
+name = "autopatch.fuzzing-service"
 version = "0.1.0"
 requires-python = ">=3.12.3"
-description = ""
+readme = "README.md"
 
 [build-system]
 requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.isort]
-src_paths = ["src", "test"]
 profile = "black"
