--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -35,7 +35,10 @@ jobs:
           sparse-checkout: |
             .github
             src
-
+      - name: Stat pyproject.toml
+        run: |
+          echo "File details for pyproject.toml:"
+          stat "${{ github.workspace }}/pyproject.toml"
       - name: Super-linter
         uses: super-linter/super-linter@85f7611e0f7b53c8573cca84aa0ed4344f6f6a4d # v7.2.1 # x-release-please-version
         env:
@@ -56,9 +59,13 @@ jobs:
         uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
         with:
           egress-policy: audit
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
+      - name: Stat pyproject.toml
+        run: |
+          echo "File details for pyproject.toml:"
+          stat "${{ github.workspace }}/pyproject.toml"
       - name: Load super-linter configuration
         # Use grep inverse matching to exclude eventual comments in the .env file
         # because the GitHub Actions command to set environment variables doesn't
