--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -35,17 +35,14 @@ jobs:
           sparse-checkout: |
             .github
             src
-      - name: Stat pyproject.toml
-        run: |
-          echo "File details for pyproject.toml:"
-          stat "${{ github.workspace }}/pyproject.toml"
       - name: Super-linter
         uses: super-linter/super-linter@85f7611e0f7b53c8573cca84aa0ed4344f6f6a4d # v7.2.1 # x-release-please-version
         env:
           # To report GitHub Actions status checks
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PYTHON_ISORT_CONFIG_FILE: 
+          PYTHON_ISORT_CONFIG_FILE: ${{ github.workspace }}/pyproject.toml
           PYTHON_BLACK_CONFIG_FILE: ${{ github.workspace }}/pyproject.toml
+          PYTHON_BLACK_LINTER_RULES: ${{ github.workspace }}/pyproject.toml
 
   fix-lint-issues:
     permissions:
@@ -62,10 +59,6 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
-      - name: Stat pyproject.toml
-        run: |
-          echo "File details for pyproject.toml:"
-          stat "${{ github.workspace }}/pyproject.toml"
       - name: Load super-linter configuration
         # Use grep inverse matching to exclude eventual comments in the .env file
         # because the GitHub Actions command to set environment variables doesn't
