--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -35,14 +35,17 @@ jobs:
           sparse-checkout: |
             .github
             src
+      - name: Load super-linter configuration
+        # Use grep inverse matching to exclude eventual comments in the .env file
+        # because the GitHub Actions command to set environment variables doesn't
+        # support comments.
+        # Ref: https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/workflow-commands-for-github-actions#setting-an-environment-variable
+        run: grep -v '^#' .github/super-linter.env >> "$GITHUB_ENV"
       - name: Super-linter
         uses: super-linter/super-linter@85f7611e0f7b53c8573cca84aa0ed4344f6f6a4d # v7.2.1 # x-release-please-version
         env:
           # To report GitHub Actions status checks
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PYTHON_ISORT_CONFIG_FILE: ${{ github.workspace }}/pyproject.toml
-          PYTHON_BLACK_CONFIG_FILE: ${{ github.workspace }}/pyproject.toml
-          PYTHON_BLACK_LINTER_RULES: ${{ github.workspace }}/pyproject.toml
 
   fix-lint-issues:
     permissions:
