--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -1,4 +1,4 @@
-FIX_MARKDOWN=true
-FIX_YAML_PRETTIER=true
-FIX_PYTHON_BLACK=true
-FIX_PYTHON_ISORT=true 
+FIX_MARKDOWN='true'
+FIX_YAML_PRETTIER='true'
+FIX_PYTHON_BLACK='true'
+FIX_PYTHON_ISORT='true'
