add workflow dispatch

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -2,6 +2,7 @@ name: Lint
 run-name: Lint by @${{ github.actor }}
 
 on: # yamllint disable-line rule:truthy
+  workflow_dispatch:
   push: null
   pull_request: null
 
