--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -14,12 +14,10 @@ jobs:
     # Super-linter workflow running in check only mode
     # See https://github.com/super-linter/super-linter#get-started
     runs-on: ubuntu-latest
-
     permissions:
       packages: read
       # To report GitHub Actions status checks
       statuses: write
-
     steps:
       - name: Harden-Runner
         uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
@@ -29,6 +27,10 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FIX_MARKDOWN: false
+          FIX_YAML_PRETTIER: false
+          FIX_PYTHON_BLACK: false
+          FIX_PYTHON_ISORT: false
         with:
           # super-linter needs the full git history to get the
           # list of files that changed across commits
@@ -36,19 +38,18 @@ jobs:
           sparse-checkout: |
             .github
             src
-      - name: Load super-linter configuration
-        # Use grep inverse matching to exclude eventual comments in the .env file
-        # because the GitHub Actions command to set environment variables doesn't
-        # support comments.
-        # Ref: https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/workflow-commands-for-github-actions#setting-an-environment-variable
-        run: grep -v '^#' .github/super-linter.env >> "$GITHUB_ENV"
       - name: Super-linter
         uses: super-linter/super-linter@85f7611e0f7b53c8573cca84aa0ed4344f6f6a4d # v7.2.1 # x-release-please-version
         env:
           # To report GitHub Actions status checks
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FIX_MARKDOWN: false
+          FIX_YAML_PRETTIER: false
+          FIX_PYTHON_BLACK: false
+          FIX_PYTHON_ISORT: false
 
   fix-lint-issues:
+    needs: lint
     permissions:
       # To write linting fixes
       contents: write
@@ -63,16 +64,14 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
-      - name: Load super-linter configuration
-        # Use grep inverse matching to exclude eventual comments in the .env file
-        # because the GitHub Actions command to set environment variables doesn't
-        # support comments.
-        # Ref: https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/workflow-commands-for-github-actions#setting-an-environment-variable
-        run: grep -v '^#' .github/super-linter.env >> "$GITHUB_ENV"
       - name: Super-Linter
         uses: super-linter/super-linter@85f7611e0f7b53c8573cca84aa0ed4344f6f6a4d # v7.2.1 # x-release-please-version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FIX_MARKDOWN: true
+          FIX_YAML_PRETTIER: true
+          FIX_PYTHON_BLACK: true
+          FIX_PYTHON_ISORT: true
       - name: Commit and push linting fixes
         # Run only on:
         # - Pull requests
