--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -9,6 +9,19 @@ on: # yamllint disable-line rule:truthy
 permissions:
   contents: read
 
+env:
+  VALIDATE_PYTHON_MYPY: false
+  VALIDATE_PYTHON_PYINK: false
+  VALIDATE_PYTHON_PYLINT: false
+  VALIDATE_PYTHON_RUFF: false
+  VALIDATE_PYTHON_FLAKE8: false
+  VALIDATE_CLANG_FORMAT: false
+  VALIDATE_CPP: false
+  VALIDATE_JAVASCRIPT_STANDARD: false
+  VALIDATE_JAVASCRIPT_PRETTIER: false
+  VALIDATE_CHECKOV: false
+  VALIDATE_BASH: false
+  VALIDATE_BASH_EXEC: false
 jobs:
   lint:
     # Super-linter workflow running in check only mode
@@ -48,16 +61,6 @@ jobs:
           FIX_YAML_PRETTIER: false
           FIX_PYTHON_BLACK: false
           FIX_PYTHON_ISORT: false
-          VALIDATE_PYTHON_MYPY: false
-          VALIDATE_PYTHON_PYINK: false
-          VALIDATE_PYTHON_PYLINT: false
-          VALIDATE_PYTHON_RUFF: false
-          VALIDATE_PYTHON_FLAKE8: false
-          VALIDATE_CLANG_FORMAT: false
-          VALIDATE_CPP: false
-          VALIDATE_JSCPD: false
-          VALIDATE_JAVASCRIPT_STANDARD: false
-          VALIDATE_JAVASCRIPT_PRETTIER: false
 
   fix-lint-issues:
     needs: lint
@@ -89,15 +92,6 @@ jobs:
           FIX_YAML_PRETTIER: true
           FIX_PYTHON_BLACK: true
           FIX_PYTHON_ISORT: true
-          VALIDATE_PYTHON_MYPY: false
-          VALIDATE_PYTHON_PYINK: false
-          VALIDATE_PYTHON_PYLINT: false
-          VALIDATE_PYTHON_RUFF: false
-          VALIDATE_PYTHON_FLAKE8: false
-          VALIDATE_CLANG_FORMAT: false
-          VALIDATE_CPP: false
-          VALIDATE_JAVASCRIPT_STANDARD: false
-          VALIDATE_JAVASCRIPT_PRETTIER: false
       - name: Commit and push linting fixes
         # Run only on:
         # - Pull requests
