--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -19,6 +19,7 @@ env:
   VALIDATE_CPP: false
   VALIDATE_JAVASCRIPT_STANDARD: false
   VALIDATE_JAVASCRIPT_PRETTIER: false
+  VALIDATE_JSCPD: false
   VALIDATE_CHECKOV: false
   VALIDATE_BASH: false
   VALIDATE_BASH_EXEC: false
@@ -63,7 +64,6 @@ jobs:
           FIX_PYTHON_ISORT: false
 
   fix-lint-issues:
-    needs: lint
     permissions:
       # To write linting fixes
       contents: write
