--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -6,14 +6,14 @@ WORKDIR /app
 
 RUN addgroup -S appuser && \
     adduser -S appuser -G appuser && \
-    apk add --no-cache python3
+    apk add --no-cache python3=3.12.9-r0
 
 FROM base AS build
 
 COPY requirements.txt .
 
 RUN apk add --no-cache \
-    py3-pip
+    py3-pip=24.3.1-r0
 
 USER appuser
 
@@ -21,7 +21,7 @@ RUN pip install --break-system-packages --user --no-cache-dir -r requirements.tx
 
 FROM base AS runner
 
-RUN apk add --no-cache gcc
+RUN apk add --no-cache gcc=14.2.0-r4
 
 COPY --from=build /home/appuser/.local /home/appuser/.local
 
@@ -30,7 +30,5 @@ COPY main.py /app
 RUN chown -R appuser:appuser /app
 
 USER appuser
-
-LABEL version="0.1.0"
 
 CMD ["python", "main.py"]
