alphabetical order or env var for main

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,10 +1,10 @@
-OPEN_API_KEY='CHANGE_ME'
-AFL_COMPILER_PATH='../afl-2.52b/afl-gcc'
-AFL_FUZZER_PATH='../afl-2.52b/afl-fuzz'
-ASAN_BUGLOG_PATH=asan_bugLog/
 AFL_BUGLOG_PATH=afl_bugLog/
-CODEBASE_PATH='./codebase/'
-EXECUTABLES_PATH='./executables/'
-EXECUTABLES_AFL_PATH='./executables_afl/'
-INPUT_PATH='./input/'
-PATCHED_CODES_PATH='./patched_codes/'
+AFL_COMPILER_PATH=../afl-2.52b/afl-gcc
+AFL_FUZZER_PATH=../afl-2.52b/afl-fuzz
+ASAN_BUGLOG_PATH=asan_bugLog/
+CODEBASE_PATH=./codebase/
+EXECUTABLES_PATH=./executables/
+EXECUTABLES_AFL_PATH=./executables_afl/
+INPUT_PATH=./input/
+OPENAI_API_KEY=CHANGE_ME
+PATCHED_CODES_PATH=./patched_codes/
