--- a/src/fuzzing-service/config/config.json
+++ b/src/fuzzing-service/config/config.json
@@ -11,7 +11,7 @@
     "fuzzer_tool_timeout_seconds": 120,
     "fuzzer_tool_version": "2.52b",
     "afl_tool_full_path": "/app/bin/afl-2.52b/afl-fuzz",
-    "afl_tool_seed_input_path": "/app/data/input",
+    "afl_tool_seed_input_path": "/app/data/seed_input",
     "afl_tool_output_path": "/app/data/afl_tool_output",
     "afl_tool_child_process_memory_limit_mb": 1000,
     "afl_tool_compiled_binary_executables_output_path": "/app/bin/executables_afl",
