--- a/src/fuzzing-service/config/config.json
+++ b/src/fuzzing-service/config/config.json
@@ -2,7 +2,7 @@
     "version": "0.1.0",
     "appname": "autopatch.fuzzing-service",
     "logging_config" : "/app/config/logging-config.json",
-    "fuzz_svc_input_codebase_path": "/app/data/codebase",
+    "fuzz_svc_input_codebase_path": "/app/input_codebase",
     "fuzz_svc_output_path": "/app/data/fuzz_svc_output",
     "fuzz_svc_output_topic": "fuzz-svc/output",
     "compiler_warning_flags": "-Wall -Wextra -Wformat -Wshift-overflow -Wcast-align -Wstrict-overflow",
@@ -11,7 +11,7 @@
     "fuzzer_tool_timeout_seconds": 120,
     "fuzzer_tool_version": "2.52b",
     "afl_tool_full_path": "/app/bin/afl-2.52b/afl-fuzz",
-    "afl_tool_seed_input_path": "/app/data/seed_input",
+    "afl_tool_seed_input_path": "/app/seed_input",
     "afl_tool_output_path": "/app/data/afl_tool_output",
     "afl_tool_child_process_memory_limit_mb": 1000,
     "afl_tool_compiled_binary_executables_output_path": "/app/bin/executables_afl",
